--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,32 @@
     <artifactId>winter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Winter</name>
+    <description>Springboot clone for beginners</description>
+    <url>https://github.com/seriseyes/winter</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Bayarkhuu.Luv</name>
+            <email>bayarkhuu.srs@gmail.com</email>
+            <organization>MITPC LLC</organization>
+            <organizationUrl>https://github.com/mitpcllc</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/seriseyes/winter.git</connection>
+        <developerConnection>scm:git:ssh://github.com/seriseyes/winter.git</developerConnection>
+        <url>https://github.com/seriseyes/winter</url>
+    </scm>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
