--- a/pom.xml
+++ b/pom.xml
@@ -4,35 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.seriseyes</groupId>
+    <groupId>org.seris</groupId>
     <artifactId>winter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>Winter</name>
-    <description>Springboot clone for beginners</description>
     <url>https://github.com/seriseyes/winter</url>
-
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>https://www.opensource.org/licenses/mit-license.php</url>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <name>Bayarkhuu.Luv</name>
-            <email>bayarkhuu.srs@gmail.com</email>
-            <organization>MITPC LLC</organization>
-            <organizationUrl>https://github.com/mitpcllc</organizationUrl>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git:git://github.com/seriseyes/winter.git</connection>
-        <developerConnection>scm:git:ssh://github.com/seriseyes/winter.git</developerConnection>
-        <url>https://github.com/seriseyes/winter</url>
-    </scm>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
